Added resume data

--- a/resume.tex
+++ b/resume.tex
@@ -16,8 +16,8 @@
 %                 awesome-nephritis, awesome-concrete, awesome-darknight
 %% Color for highlight
 % Define your custom color if you don't like awesome colors
-\colorlet{awesome}{awesome-emerald}
-%\definecolor{awesome}{HTML}{CA63A8}
+%\colorlet{awesome}{awesome-emerald}
+\definecolor{awesome}{HTML}{BF5700}
 %% Colors for text
 %\definecolor{darktext}{HTML}{414141}
 %\definecolor{text}{HTML}{414141}
@@ -39,16 +39,16 @@
 %     Personal Data
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%% Essentials
-\name{John}{Doe}
-\address{1600 Pennsylvania Ave, Washington DC}
-\mobile{555-555-5555} 
+\name{Julian}{Domingo}
+%\address{1600 Pennsylvania Ave, Washington DC}
+\mobile{713-628-6856} 
 %%% Social
-\email{johndoe@gmail.com}
-\homepage{google}
-\github{johndoe}
-\linkedin{johndoe}
+\email{julianadrianodomingo@gmail.com}
+\homepage{juliandomingo.github.io}
+\github{juliandomingo}
+\linkedin{juliandomingo}
 %%% Optionals
-\position{Software Engineer}
+\position{Looking for a part-time internship in software development during the fall 2017 and / or spring 2018 semester.}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     Content
@@ -60,13 +60,13 @@
 \makecvheader
 
 %%% Import contents
+\import{\sectiondir}{education.tex}
 \import{\sectiondir}{experience.tex}
 \import{\sectiondir}{projects.tex}
-\import{\sectiondir}{education.tex}
 \import{\sectiondir}{skills.tex}
 
-\makecvfooter
-  {}
-  {John Doe~~~·~~~Résumé}
-  {}
+% \makecvfooter
+%   {}
+%   {John Doe~~~·~~~Résumé}
+%   {}
 \end{document}
