--- a/resume/education.tex
+++ b/resume/education.tex
@@ -1,14 +1,13 @@
 \cvsection{Education}
 \begin{cventries}
   \cventry
-    {B.S. in Computer Science and Engineering, Cumulative GPA: 4.0}
-    {Massachusates Institute of Technology}
-    {Boston, MA}
-    {August 2012 - May 2016}
+    {B.S., Electrical and Computer Engineering, Major GPA: 3.5}
+    {The University of Texas at Austin}
+    {Austin, TX}
+    {Fall 2018}
     {
       \begin{cvitems}
-        \item{Additional Studies: Typographic Design, Interactive Arts Media, Codes and Code-breaking}
-        \item {Extracurricular Activities: Open Source Club, Society of Asian-American Scientists and Engineers, Association of Computing Machinery, Mobile Apps Club}
+        \item {\textbf{Coursework:} Algorithms, Software Design Laboratory, Software Design and Implementation (C/C++, Java, Data Structures), Software Testing, Introduction to Computing Systems (Assembly, Computer Architecture), Introduction to Embedded Systems (ARM Assembly)}
       \end{cvitems}
     }
 \end{cventries}
