--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -1,41 +1,25 @@
-\cvsection{Experience}
+\cvsection{Employment}
 \begin{cventries}
-  %\cventry{Software Engineer}{Capital One}{McLean, VA}{July 2016 - PRESENT}{\begin{cvitems}\item{Currently in the first year of the Technology Development Program}\end{cvitems}}  
   \cventry
-    {Software Engineer}
-    {Big Company A}
-    {San Francisco, CA}
-    {October 2015 - PRESENT}
+    {Software Engineer Intern}
+    {Amazon.com}
+    {Seattle, WA}
+    {May 2017 to Aug 2017}
     {
       \begin{cvitems}
-        \item {Design and Implementation of Web Application for tracking loss prevention in individual locations, regions, and districts}
-        \item{Implementation of Corporate Hierarchy Software in SQL and corresponding desktop application}
-        \item {Improvement of compatibility of existing SQL scripts with MS SQL Server 2014}
+        \item {TBD}
       \end{cvitems}
     }
   \cventry
-    {Web Developer}
-    {Some Other Company}
-    {New York, NY}
-    {April 2014 - July 2015}
+    {Post Silicon Validation Intern}
+    {Intel Corporation}
+    {Austin, TX}
+    {Oct 2016 to Present}
     {
       \begin{cvitems}
-        \item {Design and Implementation of developer and testing tools for documentation of bug fixes and testing}
-        \item {Debugging and fixing of high and critical defects from database defects to front end Bootstrap problems}
-        \item {Presentation of responsive web design and responsive web frameworks}
+        \item {Integrated new testing functionality into validation testing codebase, providing a GUI for selection of mass test seeds in Kivy}
+        \item {Developed Python scripts to automate web scraping of HTML/XML test logs, saving the data into easily traversed spreadsheets with external APIs}
+        \item {Optimized script run-time efficiency, significantly reducing time costs for validation team}
       \end{cvitems}
-    }
-  \cventry
-    {Research Intern}
-    {Random University}
-    {Ft. Lauderdale, FL}
-    {July 2013 - December 2013}
-    {
-      \begin{cvitems}
-        \item {Design and Development of RESTful Virtual World creation software with Java}
-        \item {Project lead on Ninth Day Project}
-        \item {Redesign of employee handbook in Adobe InDesign}
-        \item{Research and Documentation for Smart Glove Project}
-      \end{cvitems} 
     }
 \end{cventries}
