--- a/resume/projects.tex
+++ b/resume/projects.tex
@@ -1,36 +1,36 @@
-\cvsection{Other Projects}
+\cvsection{Projects}
 \begin{cventries}
   \cventry
-    {Some Hackathon 2015 \url{www.google.com} \url{www.github.com/johndoe/google}}
-    {Some Hackathon Project}
-    {Seattle, WA}
-    {April 2015}
+    {\url{https://juliandomingo.github.io/}}
+    {Personal Website}
+    {}
+    {}
     {
       \begin{cvitems}
-        \item {General description of the project, including some sort of salesmanship of the final product}
-        \item {Engineering of Event Scraper, Database Schema, Designed and implementation of product landing page as well as social media assets}
-        \item {Built on Ruby on Rails, Twilio, PostgreSQL, Bootstrap, Flexbox, and deployed via Heroku in under 24 hours}
+        \item Designed a website portfolio to gain experience in web development technologies
+        \item Implemented JavaScript and JQuery to integrate a randomized background on load and an on-click button to display all backgrounds once before visiting an old background
       \end{cvitems}
     }
   \cventry
-    {Independent Project \url{www.github.com/johndoe/funproject}}
-    {Fun Project I Did On The Side}
-    {Ann Arbor, MI}
-    {September 2015}
+    {\url{https://github.com/JulianDomingo/ChatRoom-1}}
+    {Chat Client}
+    {}
+    {}
     {
       \begin{cvitems}
-        \item {Random project I did for fun to try and learn some language}
-        \item {Used some up and coming web framework or something to do something mundane and not interesting to most people but is actually useful to me for this one class I took in undergrad}
+        \item {With a partner, developed a chat client in Java with socket programming using observer design pattern}
+        \item {User  could communicate with other users from different machines, privately messgae users, send emojis, login with a unique username, logout from the server, and see who is online real-time with the UI written in JavaFX}
       \end{cvitems}
     }
   \cventry
-    {Independent Project \url{www.github.com/johndoe/finalproject}}
-    {Random Mobile App I Tried to Build}
-    {Boston, MA}
-    {July 2015}
+    {\url{https://github.com/JulianDomingo/EE319K}}
+    {Embedded Systems Game}
+    {}
+    {}
     {
-     \begin{cvitems}
-      \item {Wrote a mobile app to do something}
-     \end{cvitems}
+      \begin{cvitems}
+        \item {With a partner, designed from the ground up a "dungeon crawler" game in C through a microcontroller and won third place in a class of 50+ teams}
+        \item {Implemented finite state machine for the player to change rooms, concurrent background music, and utilized double buffering to improve rendering quality}
+      \end{cvitems}
     }
 \end{cventries}
