--- a/resume/skills.tex
+++ b/resume/skills.tex
@@ -1,9 +1,6 @@
-\cvsection{Languages \& Skills}
+\cvsection{Skills}
 \begin{cvskills}
-    \cvskill{Languages}{Java, C, Ruby, Javascript, C\#, Visual Basic}
-    \cvskill{Frameworks}{Ruby on Rails, Bootstrap, Skeleton, Flexbox, ASP.NET}
-    \cvskill{Database}{MSSQL, MySQL, PostgreSQL}
-    \cvskill{Markup}{HTML, XML, Markdown, LaTeX}
-    \cvskill{Design}{Adobe Photoshop, Adobe InDesign, Adobe Illustrator}
-    \cvskill{Other}{English, Chinese (conversational), Spanish (limited)}
+    \cvskill{Languages}{Java, C, C++, Python, Assembly}
+    \cvskill{Web Development}{HTML, CSS, JavaScript}
+    \cvskill{Frameworks / Resources}{Bootstrap, LaTeX, Linux, Voltmeter, Oscilloscope, Soldering, Circuit Building & Analysis}
 \end{cvskills}
