Added new project, revised skills section.

--- a/resume/skills.tex
+++ b/resume/skills.tex
@@ -2,5 +2,8 @@
 \begin{cvskills}
     \cvskill{Languages}{Java, C, C++, Python, Assembly}
     \cvskill{Web Development}{HTML, CSS, JavaScript}
-    \cvskill{Frameworks / Resources}{Bootstrap, LaTeX, Linux, Voltmeter, Oscilloscope, Soldering, Circuit Building & Analysis}
+    \cvskill{Libraries}{JQuery, BeautifulSoup}
+    \cvskill{Markup}{XML, LaTeX}
+    \cvskill{Tools}{Voltmeter, Oscilloscope, Soldering, Circuit Building and Analysis}
+    \cvskill{Frameworks}{Bootstrap}
 \end{cvskills}
