--- a/resume/skills.tex
+++ b/resume/skills.tex
@@ -5,5 +5,5 @@
     \cvskill{Libraries}{JQuery, BeautifulSoup}
     \cvskill{Markup}{XML, LaTeX}
     \cvskill{Tools}{Voltmeter, Oscilloscope, Soldering, Circuit Building and Analysis}
-    \cvskill{Frameworks}{Bootstrap}
+    \cvskill{Frameworks}{Bootstrap, Kivy}
 \end{cvskills}
