--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -17,7 +17,7 @@
     {Oct 2016 to Present}
     {
       \begin{cvitems}
-        \item {Integrated new testing functionality into validation testing codebase and developed a GUI in Kivy to simplify selection and loading of tests}
+        \item {Integrated new testing functionality into validation testing codebase and developed a graphical user interface in Kivy to simplify selection and loading of tests}
         \item {Developed Python scripts to automate web scraping of HTML test logs, saving the data into easily traversed spreadsheets with external APIs}
         \item {Optimized script run-time efficiency, significantly reducing time costs for validation team}
       \end{cvitems}
