Added academic involvement section

--- a/resume.tex
+++ b/resume.tex
@@ -48,7 +48,7 @@
 \github{juliandomingo}
 \linkedin{juliandomingo}
 %%% Optionals
-\position{Looking for a part-time internship in software development during the spring 2017, fall 2017 and / or spring 2018 semester.}
+\position{Looking for a part-time internship in software development during the fall 2017 and / or spring 2018 semester.}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     Content
@@ -63,6 +63,7 @@
 \import{\sectiondir}{education.tex}
 \import{\sectiondir}{experience.tex}
 \import{\sectiondir}{projects.tex}
+\import{\sectiondir}{academic.tex}
 \import{\sectiondir}{skills.tex}
 
 % \makecvfooter
