Reworded academic involvement bullet point

--- a/resume/academic.tex
+++ b/resume/academic.tex
@@ -8,6 +8,6 @@
 		{
 			\begin{cvitems}
 				\item {For CodePath's Web Security Course}
-				\item {Led weekly discussion sessions overviewing topics in web security fundamentals, and assisted students in assignments utilizing PHP and MySQL }
+				\item {Lead weekly discussion sessions overviewing topics in web security fundamentals, and assist students in assignments applying these fundamentals utilizing PHP and MySQL}
 		}	\end{cvitems}
 \end{cventries}
