Fixed bracket syntax error

--- a/resume/academic.tex
+++ b/resume/academic.tex
@@ -9,5 +9,6 @@
 			\begin{cvitems}
 				\item {For CodePath's Web Security Course}
 				\item {Lead weekly discussion sessions overviewing topics in web security fundamentals, and assist students in assignments applying these fundamentals utilizing PHP and MySQL}
-		}	\end{cvitems}
+			\end{cvitems}
+		}
 \end{cventries}
