Removed project, reduced margins and padding.

--- a/resume/projects.tex
+++ b/resume/projects.tex
@@ -33,15 +33,15 @@
         \item {Implemented finite state machine for the player to change rooms, concurrent background music, and utilized double buffering to improve rendering quality}
       \end{cvitems}
     }
-  \cventry
-    {\url{https://github.com/JulianDomingo/EE312/tree/master/Project6}}
-    {Blip Language and Parser}
-    {}
-    {}
-    {
-      \begin{cvitems}
-        \item {Creeated programming language in C++ that parsed input from text file and handled integer instantiation and computation, output to console, conditionals, and while loops}
-        \item {Utilized polish notation in the form of expression trees to handle integer computation}
-      \end{cvitems}
-    }
+  % \cventry
+  %   {\url{https://github.com/JulianDomingo/EE312/tree/master/Project6}}
+  %   {Blip Language and Parser}
+  %   {}
+  %   {}
+  %   {
+  %     \begin{cvitems}
+  %       \item {Creeated programming language in C++ that parsed input from text file and handled integer instantiation and computation, output to console, conditionals, and while loops}
+  %       \item {Utilized polish notation in the form of expression trees to handle integer computation}
+  %     \end{cvitems}
+  %   }
 \end{cventries}
