Updated personal site URL, reordered skills section

--- a/resume.tex
+++ b/resume.tex
@@ -44,7 +44,7 @@
 \mobile{713-628-6856} 
 %%% Social
 \email{julianadrianodomingo@gmail.com}
-\homepage{juliandomingo.github.io}
+\homepage{juliandomingo.com}
 \github{juliandomingo}
 \linkedin{juliandomingo}
 %%% Optionals
