--- a/resume/education.tex
+++ b/resume/education.tex
@@ -7,7 +7,7 @@
     {Fall 2018}
     {
       \begin{cvitems}
-        \item {\textbf{Coursework:} Algorithms, Software Design Laboratory, Software Design and Implementation (C/C++, Java, Data Structures), Software Testing, Introduction to Computing Systems (Assembly, Computer Architecture), Introduction to Embedded Systems (ARM Assembly)}
+        \item {\textbf{Coursework:} Algorithms, Concurrent and Distributed Systems (Java Concurrency, Cloud Computing), Software Design and Implementation (C/C++, Java, Data Structures), Software Testing, Introduction to Computing Systems (Assembly, Computer Architecture), Introduction to Embedded Systems (ARM Assembly)}
       \end{cvitems}
     }
 \end{cventries}
