--- a/resume/projects.tex
+++ b/resume/projects.tex
@@ -1,7 +1,7 @@
 \cvsection{Projects}
 \begin{cventries}
   \cventry
-    {\url{https://juliandomingo.github.io/}}
+    {\url{juliandomingo.com}}
     {Personal Website}
     {}
     {}
