--- a/resume/skills.tex
+++ b/resume/skills.tex
@@ -1,9 +1,15 @@
 \cvsection{Skills}
 \begin{cvskills}
-    \cvskill{Web Development}{HTML, CSS, JavaScript}
-    \cvskill{Frameworks}{Bootstrap, Kivy}
-    \cvskill{Languages}{Java, C, C++, Python, Assembly}
-    \cvskill{Libraries}{JQuery, BeautifulSoup}
-    \cvskill{Markup}{XML, LaTeX}
-    \cvskill{Tools}{Voltmeter, Oscilloscope, Soldering, Circuit Building and Analysis}
+	\cvskill{Web Development}{HTML, CSS, JavaScript}
+	\cvskill{Languages}{Java, C, C++, Python, SQL, PHP, ARM Assembly}
+	\cvskill{Frameworks/Tools}{jQuery, Bootstrap, BeautifulSoup, Kivy}
+	\cvskill{Other}{Voltmeter, Oscilloscope, Soldering, Circuit Building and Analysis}
+	\cvskill{}{}
+	\cvskill{}{}
+    % \cvskill{Web Development}{HTML, CSS, JavaScript}
+    % \cvskill{Frameworks}{Bootstrap, Kivy}
+    % \cvskill{Languages}{Java, C, C++, Python, Assembly}
+    % \cvskill{Libraries}{JQuery, BeautifulSoup}
+    % \cvskill{Markup}{XML, LaTeX}
+    % \cvskill{Tools}{Voltmeter, Oscilloscope, Soldering, Circuit Building and Analysis}
 \end{cvskills}
