--- a/resume/academic.tex
+++ b/resume/academic.tex
@@ -2,12 +2,12 @@
 \begin{cventries}
 	\cventry
 		{Teaching Assistant}
-		{CodePath}
+		{Codepath.com}
 		{Austin, TX}
 		{Jan 2017 to Present}
 		{
 			\begin{cvitems}
-				\item {For CodePath's Web Security Course}
+				\item {For Codepath's Web Security course}
 				\item {Lead weekly discussion sessions overviewing topics in web security fundamentals, and assist students in assignments applying these fundamentals utilizing PHP and MySQL}
 			\end{cvitems}
 		}
