Bolded font appearance, reworded academic involvement section

--- a/resume.tex
+++ b/resume.tex
@@ -41,10 +41,10 @@
 %%% Essentials
 \name{Julian}{Domingo}
 %\address{1600 Pennsylvania Ave, Washington DC}
-\mobile{713-628-6856} 
+\mobile{\footnotesize 713-628-6856} 
 %%% Social
 \email{julianadrianodomingo@gmail.com}
-\homepage{juliandomingo.com}
+\homepage{juliandomingo.github.io}
 \github{juliandomingo}
 \linkedin{juliandomingo}
 %%% Optionals
