--- a/resume/academic.tex
+++ b/resume/academic.tex
@@ -1,14 +1,13 @@
 \cvsection{Academic Involvement}
 \begin{cventries}
 	\cventry
-		{Teaching Assistant}
-		{Codepath.com}
-		{Austin, TX}
-		{Jan 2017 to Present}
+		{\normalsize Teaching Assistant - Web Security}
+		{\large Codepath.com}
+		{\normalsize \textbf{Austin, TX}}
+		{\normalsize \textbf{Jan 2017 to Present}}
 		{
 			\begin{cvitems}
-				\item {For Codepath's Web Security course}
-				\item {Lead weekly discussion sessions overviewing topics in web security fundamentals, and assist students in assignments applying these fundamentals utilizing PHP and MySQL}
+				\item {\normalsize Lead weekly discussion sessions overviewing topics in web security fundamentals, and assist students in assignments applying these fundamentals utilizing PHP and MySQL}
 			\end{cvitems}
 		}
 \end{cventries}
