--- a/resume/education.tex
+++ b/resume/education.tex
@@ -1,13 +1,13 @@
 \cvsection{Education}
 \begin{cventries}
   \cventry
-    {B.S., Electrical and Computer Engineering, Major GPA: 3.5}
-    {The University of Texas at Austin}
-    {Austin, TX}
-    {Fall 2018}
+    {\normalsize B.S., Electrical and Computer Engineering, Major GPA: \large   3.5}
+    {\large The University of Texas at Austin}
+    {\normalsize \textbf{Austin, TX}}
+    {\normalsize \textbf{Fall 2018}}
     {
       \begin{cvitems}
-        \item {\textbf{Coursework:} Algorithms, Concurrent and Distributed Systems (Java Concurrency, Cloud Computing), Software Design and Implementation (C/C++, Java, Data Structures), Software Testing, Introduction to Computing Systems (Assembly, Computer Architecture), Introduction to Embedded Systems (ARM Assembly)}
+        \item {\normalsize \textbf{Coursework:} Algorithms, Concurrent and Distributed Systems (Java Concurrency, Cloud Computing), Software Design and Implementation (C/C++, Java, Data Structures), Software Testing, Introduction to Computing Systems (Assembly, Computer Architecture), Introduction to Embedded Systems (ARM Assembly)}
       \end{cvitems}
     }
 \end{cventries}
