--- a/resume/projects.tex
+++ b/resume/projects.tex
@@ -1,36 +1,36 @@
 \cvsection{Projects}
 \begin{cventries}
   \cventry
-    {\url{juliandomingo.com}}
-    {Personal Website}
+    {\normalsize \url{juliandomingo.github.io}}
+    {\large Personal Website}
     {}
     {}
     {
       \begin{cvitems}
-        \item Designed a website portfolio to gain experience in web development technologies
-        \item Implemented JavaScript and JQuery to integrate a randomized background on load and an on-click button to display all backgrounds once before visiting an old background
+        \item {\normalsize Designed a website portfolio to gain experience in web development technologies}
+        \item {\normalsize Implemented JavaScript and JQuery to integrate a randomized on click background algorithm to display all backgrounds once before visiting an old background}
       \end{cvitems}
     }
   \cventry
-    {\url{https://github.com/JulianDomingo/ChatRoom-1}}
-    {Chat Client}
+    {\normalsize \url{https://github.com/JulianDomingo/ChatRoom-1}}
+    {\large Chat Client}
     {}
     {}
     {
       \begin{cvitems}
-        \item {With a partner, developed a chat client in Java with socket programming using observer design pattern}
-        \item {User  could communicate with other users from different machines, privately messgae users, send emojis, login with a unique username, logout from the server, and see who is online real-time with the UI written in JavaFX}
+        \item {\normalsize With a partner, developed a chat client in Java with socket programming using observer design pattern}
+        \item {\normalsize User could communicate with other users from different machines, privately messgae users, send emojis, login with a unique username, logout from the server, and see who is online real-time with the UI written in JavaFX}
       \end{cvitems}
     }
   \cventry
-    {\url{https://github.com/JulianDomingo/EE319K}}
-    {Embedded Systems Game}
+    {\normalsize \url{https://github.com/JulianDomingo/EE319K}}
+    {\large Embedded Systems Game}
     {}
     {}
     {
       \begin{cvitems}
-        \item {With a partner, designed from the ground up a "dungeon crawler" game in C through a microcontroller and won third place in a class of 50+ teams}
-        \item {Implemented finite state machine for the player to change rooms, concurrent background music, and utilized double buffering to improve rendering quality}
+        \item {\normalsize With a partner, designed from the ground up a "dungeon crawler" game in C through a microcontroller and won third place in a class of 50+ teams}
+        \item {\normalsize Implemented finite state machine for the player to change rooms, concurrent background music, and utilized double buffering to improve rendering quality}
       \end{cvitems}
     }
   % \cventry
