--- a/resume/skills.tex
+++ b/resume/skills.tex
@@ -1,9 +1,9 @@
 \cvsection{Skills}
 \begin{cvskills}
-	\cvskill{Languages}{Java, C, C++, Python, SQL, PHP, ARM Assembly}
-	\cvskill{Web Development}{HTML, CSS, JavaScript}
-	\cvskill{Frameworks/Tools}{jQuery, Bootstrap, BeautifulSoup, Kivy}
-	\cvskill{Other}{Voltmeter, Oscilloscope, Soldering, Circuit Building and Analysis}
+	\cvskill{\normalsize Languages}{\normalsize Java, C, C++, Python, SQL, PHP, ARM Assembly}
+	\cvskill{\normalsize Web Development}{\normalsize HTML, CSS, JavaScript}
+	\cvskill{\normalsize Frameworks/Tools}{\normalsize jQuery, Bootstrap, BeautifulSoup, Kivy}
+	\cvskill{\normalsize Other}{\normalsize Voltmeter, Oscilloscope, Soldering, Circuit Building and Analysis}
 	\cvskill{}{}
 	\cvskill{}{}
     % \cvskill{Web Development}{HTML, CSS, JavaScript}
