--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -1,25 +1,25 @@
 \cvsection{Employment}
 \begin{cventries}
   \cventry
-    {Software Engineer Intern}
-    {Amazon.com}
-    {Seattle, WA}
-    {May 2017 to Aug 2017}
+    {\normalsize Software Engineer Intern}
+    {\large Amazon.com}
+    {\normalsize \textbf{Seattle, WA}}
+    {\normalsize \textbf{May 2017 to Aug 2017}}
     {
       \begin{cvitems}
-        \item {TBD}
+        \item {\normalsize TBD}
       \end{cvitems}
     }
   \cventry
-    {Post Silicon Validation Intern}
-    {Intel Corporation}
-    {Austin, TX}
-    {Oct 2016 to Present}
+    {\normalsize Post Silicon Validation Intern}
+    {\large Intel Corporation}
+    {\normalsize \textbf{Austin, TX}}
+    {\normalsize \textbf{Oct 2016 to Present}}
     {
       \begin{cvitems}
-        \item {Integrated new testing functionality into validation testing codebase and developed a graphical user interface in Kivy to simplify selection and loading of tests}
-        \item {Developed Python scripts to automate web scraping of HTML test logs, saving the data into easily traversed spreadsheets with external APIs}
-        \item {Optimized script run-time efficiency, significantly reducing time costs for validation team}
+        \item {\normalsize Integrated new testing functionality into validation testing codebase and developed a graphical user interface in Kivy to simplify selection and loading of tests}
+        \item {\normalsize Developed Python scripts to automate web scraping of HTML test logs, saving the data into easily traversed spreadsheets with external APIs}
+        \item {\normalsize Optimized script run-time efficiency, significantly reducing time costs for validation team}
       \end{cvitems}
     }
 \end{cventries}
