Bolded more font

--- a/resume.tex
+++ b/resume.tex
@@ -41,14 +41,14 @@
 %%% Essentials
 \name{Julian}{Domingo}
 %\address{1600 Pennsylvania Ave, Washington DC}
-\mobile{\footnotesize 713-628-6856} 
+\mobile{\footnotesize{713-628-6856}}
 %%% Social
 \email{julianadrianodomingo@gmail.com}
 \homepage{juliandomingo.github.io}
 \github{juliandomingo}
 \linkedin{juliandomingo}
 %%% Optionals
-\position{\normalsize Looking for a part-time internship in software development during the fall 2017 and / or spring 2018 semester.}
+\position{\normalsize \textbf{Looking for a part-time internship in software development during the fall 2017 and / or spring 2018 semester.}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     Content
