--- a/resume/academic.tex
+++ b/resume/academic.tex
@@ -1,7 +1,7 @@
 \cvsection{Academic Involvement}
 \begin{cventries}
 	\cventry
-		{\normalsize Teaching Assistant - Web Security}
+		{\normalsize \textbf{Teaching Assistant - Web Security}}
 		{\large Codepath.com}
 		{\normalsize \textbf{Austin, TX}}
 		{\normalsize \textbf{Jan 2017 to Present}}
