--- a/resume/education.tex
+++ b/resume/education.tex
@@ -1,7 +1,7 @@
 \cvsection{Education}
 \begin{cventries}
   \cventry
-    {\normalsize B.S., Electrical and Computer Engineering, Major GPA: \large   3.5}
+    {\textbf{\normalsize B.S., Electrical and Computer Engineering, Major GPA: \large 3.5}}
     {\large The University of Texas at Austin}
     {\normalsize \textbf{Austin, TX}}
     {\normalsize \textbf{Fall 2018}}
