--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -1,7 +1,7 @@
 \cvsection{Employment}
 \begin{cventries}
   \cventry
-    {\normalsize Software Engineer Intern}
+    {\normalsize \textbf{Software Engineer Intern}}
     {\large Amazon.com}
     {\normalsize \textbf{Seattle, WA}}
     {\normalsize \textbf{May 2017 to Aug 2017}}
@@ -11,7 +11,7 @@
       \end{cvitems}
     }
   \cventry
-    {\normalsize Post Silicon Validation Intern}
+    {\normalsize \textbf{Post Silicon Validation Intern}}
     {\large Intel Corporation}
     {\normalsize \textbf{Austin, TX}}
     {\normalsize \textbf{Oct 2016 to Present}}
