--- a/resume/projects.tex
+++ b/resume/projects.tex
@@ -1,7 +1,7 @@
 \cvsection{Projects}
 \begin{cventries}
   \cventry
-    {\normalsize \url{juliandomingo.github.io}}
+    {\normalsize \textbf{\url{juliandomingo.github.io}}}
     {\large Personal Website}
     {}
     {}
@@ -12,7 +12,7 @@
       \end{cvitems}
     }
   \cventry
-    {\normalsize \url{https://github.com/JulianDomingo/ChatRoom-1}}
+    {\normalsize \textbf{\url{https://github.com/JulianDomingo/ChatRoom-1}}}
     {\large Chat Client}
     {}
     {}
@@ -23,7 +23,7 @@
       \end{cvitems}
     }
   \cventry
-    {\normalsize \url{https://github.com/JulianDomingo/EE319K}}
+    {\normalsize \textbf{\url{https://github.com/JulianDomingo/EE319K}}}
     {\large Embedded Systems Game}
     {}
     {}
