Revised some wording, fixed font size for project 3

--- a/resume/academic.tex
+++ b/resume/academic.tex
@@ -1,4 +1,4 @@
-\cvsection{Academic Involvement}
+\cvsection{\huge{Academic Involvement}}
 \begin{cventries}
 	\cventry
 		{\normalsize \textbf{Teaching Assistant - Web Security}}
