--- a/resume/education.tex
+++ b/resume/education.tex
@@ -1,4 +1,4 @@
-\cvsection{\large Education}
+\cvsection{\huge{Education}}
 \begin{cventries}
   \cventry
     {\textbf{\normalsize B.S., Electrical and Computer Engineering, Major GPA: \large 3.5}}
