--- a/resume/projects.tex
+++ b/resume/projects.tex
@@ -1,16 +1,16 @@
-\cvsection{Projects}
+\cvsection{\huge{Projects}}
 \begin{cventries}
-  \cventry
-    {\normalsize \textbf{\url{juliandomingo.github.io}}}
-    {\large Personal Website}
-    {}
-    {}
-    {
-      \begin{cvitems}
-        \item {\normalsize Designed a website portfolio to gain experience in web development technologies}
-        \item {\normalsize Implemented JavaScript and JQuery to integrate a randomized on click background algorithm to display all backgrounds once before visiting an old background}
-      \end{cvitems}
-    }
+  % \cventry
+  %   {\normalsize \textbf{\url{juliandomingo.github.io}}}
+  %   {\large Personal Website}
+  %   {}
+  %   {}
+  %   {
+  %     \begin{cvitems}
+  %       \item {\normalsize Designed a website portfolio to gain experience in web development technologies}
+  %       \item {\normalsize Implemented JavaScript and jQuery to integrate a randomized on click background algorithm to display all backgrounds once before visiting an old background}
+  %     \end{cvitems}
+  %   }
   \cventry
     {\normalsize \textbf{\url{https://github.com/JulianDomingo/ChatRoom-1}}}
     {\large Chat Client}
@@ -30,18 +30,18 @@
     {
       \begin{cvitems}
         \item {\normalsize With a partner, designed from the ground up a "dungeon crawler" game in C through a microcontroller and won third place in a class of 50+ teams}
-        \item {\normalsize Implemented finite state machine for the player to change rooms, concurrent background music, and utilized double buffering to improve rendering quality}
+        \item {\normalsize Implemented finite state machine for the player to change rooms, concurrent background music, and used double buffering to improve rendering quality}
       \end{cvitems}
     }
-  % \cventry
-  %   {\url{https://github.com/JulianDomingo/EE312/tree/master/Project6}}
-  %   {Blip Language and Parser}
-  %   {}
-  %   {}
-  %   {
-  %     \begin{cvitems}
-  %       \item {Creeated programming language in C++ that parsed input from text file and handled integer instantiation and computation, output to console, conditionals, and while loops}
-  %       \item {Utilized polish notation in the form of expression trees to handle integer computation}
-  %     \end{cvitems}
-  %   }
+  \cventry
+    {\normalsize \textbf{\url{https://github.com/JulianDomingo/EE312/tree/master/Project6}}}
+    {\large Blip Language and Parser}
+    {}
+    {}
+    {
+      \begin{cvitems}
+        \item {\normalsize Created programming language in C++ that parsed input from text file and handled integer instantiation and computation, output to console, conditionals, and while loops}
+        \item {\normalsize Utilized polish notation in the form of expression trees to handle integer computation}
+      \end{cvitems}
+    }
 \end{cventries}
