--- a/resume/skills.tex
+++ b/resume/skills.tex
@@ -1,8 +1,8 @@
-\cvsection{Skills}
+\cvsection{\huge{Skills}}
 \begin{cvskills}
-	\cvskill{\normalsize Languages}{\normalsize Java, C, C++, Python, SQL, PHP, ARM Assembly}
+	\cvskill{\normalsize Languages}{\normalsize Java, C, C++, Python, SQL, PHP}
 	\cvskill{\normalsize Web Development}{\normalsize HTML, CSS, JavaScript}
-	\cvskill{\normalsize Frameworks/Tools}{\normalsize jQuery, Bootstrap, BeautifulSoup, Kivy}
+	\cvskill{\normalsize Frameworks/Tools}{\normalsize jQuery, Bootstrap, Kivy}
 	\cvskill{\normalsize Other}{\normalsize Voltmeter, Oscilloscope, Soldering, Circuit Building and Analysis}
 	\cvskill{}{}
 	\cvskill{}{}
