--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -1,7 +1,7 @@
 \cvsection{\huge{Employment}}
 \begin{cventries}
   \cventry
-    {\normalsize \textbf{Software Engineer Intern - Fulfillment Technologies}}
+    {\normalsize \textbf{Software Engineer Intern}}
     {\large Amazon.com}
     {\normalsize \textbf{Seattle, WA}}
     {\normalsize \textbf{May 2017 to Aug 2017}}
