Removed objective statement, revised some bullet points

--- a/resume/academic.tex
+++ b/resume/academic.tex
@@ -7,7 +7,7 @@
 		{\normalsize \textbf{Jan 2017 to Present}}
 		{
 			\begin{cvitems}
-				\item {\normalsize Lead weekly discussion sessions overviewing topics in web security fundamentals, and assist students in assignments applying these fundamentals utilizing PHP and MySQL}
+				\item {\normalsize Lead weekly discussion sessions overviewing topics in web security fundamentals, and assist students in assignments applying these fundamentals utilizing PHP and a MySQL database}
 			\end{cvitems}
 		}
 \end{cventries}
