--- a/resume/skills.tex
+++ b/resume/skills.tex
@@ -1,6 +1,6 @@
 \cvsection{\huge{Skills}}
 \begin{cvskills}
-	\cvskill{\normalsize Languages}{\normalsize Java, C, C++, Python, SQL, PHP}
+	\cvskill{\normalsize Languages}{\normalsize Java, C, Python, PHP, SQL, C++}
 	\cvskill{\normalsize Web Development}{\normalsize HTML, CSS, JavaScript}
 	\cvskill{\normalsize Frameworks/Tools}{\normalsize jQuery, Bootstrap, Kivy}
 	\cvskill{\normalsize Other}{\normalsize Voltmeter, Oscilloscope, Soldering, Circuit Building and Analysis}
