--- a/resume.tex
+++ b/resume.tex
@@ -48,7 +48,7 @@
 \github{juliandomingo}
 \linkedin{juliandomingo}
 %%% Optionals
-\position{\normalsize \textbf{Looking for a part-time internship in software development during the fall 2017 and / or spring 2018 semester.}}
+% \position{\normalsize \textbf{Looking for a part-time internship in software development during the fall 2017 and / or spring 2018 semester.}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     Content
