--- a/resume/education.tex
+++ b/resume/education.tex
@@ -7,7 +7,7 @@
     {\normalsize \textbf{Fall 2018}}
     {
       \begin{cvitems}
-        \item {\normalsize \textbf{Coursework:} Algorithms, Concurrent and Distributed Systems (Java Concurrency, Cloud Computing), Software Design and Implementation (C/C++, Java, Data Structures), Software Testing, Introduction to Computing Systems (Assembly, Computer Architecture), Introduction to Embedded Systems (ARM Assembly)}
+        \item {\normalsize \textbf{Coursework:} Algorithms {\LARGE\textbullet }\ Concurrent and Distributed Systems {\LARGE\textbullet }\ Introduction to Embedded Systems (ARM Assembly) {\LARGE\textbullet }\ Software Testing {\LARGE\textbullet }\ Introduction to Computing Systems (Assembly, Computer Architecture) \\{\LARGE\textbullet }\ Software Design and Implementation (C, C++ and Java Data Structures)}
       \end{cvitems}
     }
 \end{cventries}
