--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -17,9 +17,10 @@
     {\normalsize \textbf{Oct 2016 to Present}}
     {
       \begin{cvitems}
-        \item {\normalsize Integrated new testing functionality into validation testing codebase and developed a graphical user interface in Kivy to simplify selection and loading of tests}
-        \item {\normalsize Developed Python scripts to automate web scraping of HTML test logs, saving the data into easily traversed spreadsheets with external APIs}
-        \item {\normalsize Optimized script run-time efficiency, significantly reducing time costs for validation team}
+        \item {\normalsize Integrated testing functionality from an existing software into a new internal codebase for system-on-chip validation}
+        \item {\normalsize Developed a graphical user interface for the functionality to simplify selection and loading of test programs in Kivy}
+        \item {\normalsize Took responsibility to maintain, test, and add additional features to the codebase}
+        \item {\normalsize Developed Python scripts to automate manual validation testing procedures, significantly reducing time costs for \\validation teams}
       \end{cvitems}
     }
 \end{cventries}
