Changed bullet points and added missing paren

--- a/resume/education.tex
+++ b/resume/education.tex
@@ -7,7 +7,7 @@
     {\normalsize \textbf{Fall 2018}}
     {
       \begin{cvitems}
-        \item {\normalsize \textbf{Coursework:} Algorithms {\LARGE\textbullet }\ Concurrent and Distributed Systems {\LARGE\textbullet }\ Introduction to Embedded Systems (ARM Assembly) {\LARGE\textbullet }\ Software Testing {\LARGE\textbullet }\ Introduction to Computing Systems (Assembly, Computer Architecture) \\{\LARGE\textbullet }\ Software Design and Implementation (C, C++ and Java Data Structures)}
+        \item {\normalsize \textbf{Coursework:} Algorithms {\LARGE\textbullet }\ Concurrent and Distributed Systems {\LARGE\textbullet }\ Software Design and Implementation (C, C++ and Java Data Structures) {\LARGE\textbullet }\ Software Testing {\LARGE\textbullet }\ Introduction to Computing Systems (Assembly, Computer Architecture) \\{\LARGE\textbullet }\ Introduction to Embedded Systems (ARM Assembly)}
       \end{cvitems}
     }
 \end{cventries}
