--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -3,11 +3,11 @@
   \cventry
     {\normalsize \textbf{Software Engineer Intern}}
     {\large Amazon.com}
-    {\normalsize \textbf{Seattle, WA}}
+    {\normalsize \textbf{Austin, TX}}
     {\normalsize \textbf{May 2017 to Aug 2017}}
     {
       \begin{cvitems}
-        \item {\normalsize TBD}
+        \item {\normalsize TBD - Amazon Fulfillment Technologies group}
       \end{cvitems}
     }
   \cventry
