Removed extra text in Amazon bulletpoint

--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -7,7 +7,7 @@
     {\normalsize \textbf{May 2017 to Aug 2017}}
     {
       \begin{cvitems}
-        \item {\normalsize TBD - Amazon Fulfillment Technologies group}
+        \item {\normalsize TBD}
       \end{cvitems}
     }
   \cventry
