Updated resume content

--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -14,13 +14,13 @@
     {\normalsize \textbf{Post Silicon Validation Intern}}
     {\large Intel Corporation}
     {\normalsize \textbf{Austin, TX}}
-    {\normalsize \textbf{Oct 2016 to Present}}
+    {\normalsize \textbf{Oct 2016 to Apr 2017}}
     {
       \begin{cvitems}
-        \item {\normalsize Integrated testing functionality from an existing software into a new internal codebase for system-on-chip validation}
-        \item {\normalsize Developed a graphical user interface for the functionality to simplify selection and loading of test programs in Kivy}
-        \item {\normalsize Took responsibility to maintain, test, and add additional features to the codebase}
-        \item {\normalsize Developed Python scripts to automate manual validation testing procedures, significantly reducing time costs for \\validation teams}
+        \item {\normalsize Migrated chip validation testing to a C# platform with greater access to hardware interfacing} 
+        \item {\normalsize Added features to a validation codebase made by a graduate intern}
+        \item {\normalsize Created a graphical user interface in Kivy for selection and loading of test programs for chip validation}
+        \item {\normalsize Developed Python scripts to automate manual testing procedures, significantly reducing time costs for \\validation teams}
       \end{cvitems}
     }
 \end{cventries}
