--- a/resume/academic.tex
+++ b/resume/academic.tex
@@ -7,7 +7,8 @@
 		{\normalsize \textbf{Jan 2017 to Present}}
 		{
 			\begin{cvitems}
-				\item {\normalsize Lead weekly discussion sessions overviewing topics in web security fundamentals, and assist students in assignments applying these fundamentals utilizing PHP and a MySQL database}
+				\item {\normalsize Lead weekly discussion sessions overviewing topics in web security}
+                \item {\normalsize Learn to use PHP, SQL, and a variety of security tools in the Kali linux distrobution through Docker containers} 
 			\end{cvitems}
 		}
 \end{cventries}
