--- a/resume/skills.tex
+++ b/resume/skills.tex
@@ -1,8 +1,8 @@
 \cvsection{\huge{Skills}}
 \begin{cvskills}
-	\cvskill{\normalsize Languages}{\normalsize Java, C, Python, PHP, SQL, C++}
-	\cvskill{\normalsize Web Development}{\normalsize HTML, CSS, JavaScript}
-	\cvskill{\normalsize Frameworks/Tools}{\normalsize jQuery, Bootstrap, Kivy}
+	\cvskill{\normalsize Languages}{\normalsize Java, C, Python, PHP, SQL}
+	\cvskill{\normalsize Web Development}{\normalsize HTML, CSS}
+	\cvskill{\normalsize Frameworks/Tools}{\normalsize Bootstrap}
 	\cvskill{\normalsize Other}{\normalsize Voltmeter, Oscilloscope, Soldering, Circuit Building and Analysis}
 	\cvskill{}{}
 	\cvskill{}{}
